<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_home"
            android:icon="@drawable/outline_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/activity_main_drawer_profile"
            android:icon="@drawable/outline_face_black_24dp"
            android:title="@string/text_my_profile" />
        <item
            android:id="@+id/activity_main_drawer_evolution"
            android:icon="@drawable/outline_trending_up_black_24dp"
            android:title="@string/evolution" />
        <item
            android:id="@+id/activity_main_drawer_account"
            android:icon="@drawable/id_card_icon_124180"
            android:title="@string/text_my_account" />
        <item
            android:id="@+id/activity_main_drawer_change_account"
            android:icon="@drawable/account_convert"
            android:title="@string/text_change_account" />
    </group>

    <item android:title="@string/text_my_datas">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_contacts"
                    android:icon="@drawable/book_contact"
                    android:title="@string/text_my_contacts" />
                <item
                    android:id="@+id/activity_main_drawer_ordonnances"
                    android:icon="@drawable/prescription"
                    android:title="Mes Ordonnances" />
                <!-- <item
                    android:id="@+id/activity_main_drawer_treatments"
                    android:icon="@drawable/medicine_medical_pharmacy_health_prescription_pill_drug_icon_140910"
                    android:title="@string/text_my_treatments" /> -->
                <item
                android:id="@+id/activity_main_drawer_contact_appointments"
                android:icon="@drawable/bookeddatecalendarmarkcrosssave_109769"
                android:title="@string/text_my_appointments" />
                <item
                    android:id="@+id/activity_main_drawer_analysis_appointments"
                    android:icon="@drawable/syringe_vaccine_icon_127255"
                    android:title="@string/my_analysis" />
                <item
                    android:id="@+id/activity_main_drawer_exam_appointments"
                    android:icon="@drawable/heart"
                    android:title="@string/my_exams" />
                <item
                    android:id="@+id/activity_main_drawer_etablissement"
                    android:icon="@drawable/big_hospital"
                    android:title="Mes Etablissements" />

            </group>
        </menu>
    </item>

    <item android:title="temporaire">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_oldAccueil"
                    android:title="Ancien Accueil" />

            </group>
        </menu>
    </item>

</menu>