<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activities.afficher.AfficherProfilActivity"
    >

    <!-- 1 | MainActivity RootView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <include layout="@layout/toolbar"/>

        <include layout="@layout/progress_bar"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/listProfil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/selectProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/select"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDelete"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dip"
                app:fabSize="mini"
                app:srcCompat="@drawable/outline_delete_black_24dp"
                app:backgroundTint="@color/colorPrimary"
                app:tint="@android:color/white"
                />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/text_date"
            app:errorEnabled="true"
            android:paddingLeft="80dip"
            android:paddingRight="80dip"
            app:startIconDrawable="@drawable/outline_event_black_24dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTaille"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/text_taille"
            app:errorEnabled="true"
            android:paddingLeft="80dip"
            android:paddingRight="80dip"
            app:startIconDrawable="@drawable/comparer_24"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textTaille"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPoids"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/text_poids"
            android:paddingLeft="40dip"
            android:paddingRight="40dip"
            app:startIconDrawable="@drawable/outline_format_align_center_black_24dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPoids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <include layout="@layout/bottom_navigation"/>

</androidx.drawerlayout.widget.DrawerLayout>