<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activities.add.AddUserActivity"
    >

    <!-- 1 | MainActivity RootView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        >

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ToolBarStyle"/>

        <ProgressBar
            android:id="@+id/my_progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:visibility="gone"
            android:max="100"
            android:progress="0"
            />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/text_name"
        android:paddingLeft="80dip"
        android:paddingRight="80dip"

        app:startIconDrawable="@drawable/outline_face_black_24dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipSexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:chipSpacing="80dip"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWoman"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/woman_icon"
            android:text="@string/text_woman"
            app:closeIconVisible="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMan"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/man_icon"
            android:text="@string/text_man"
            app:closeIconVisible="false"/>

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/text_birthday"

        android:paddingLeft="80dip"
        android:paddingRight="80dip"
        app:startIconDrawable="@drawable/outline_cake_black_24dp"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/listDepartement"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <AutoCompleteTextView
            android:id="@+id/selectDepartement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dip"
            android:focusable="false"
            android:hint="@string/text_departement"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSave"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="30dip"
            app:srcCompat="@drawable/outline_save_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:tint="@android:color/white"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCancel"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="30dip"
            app:srcCompat="@drawable/outline_replay_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:tint="@android:color/white"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEdit"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="30dip"
            app:srcCompat="@drawable/outline_create_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:tint="@android:color/white"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDelete"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="30dip"
            app:srcCompat="@drawable/outline_delete_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:tint="@android:color/white"
            />
    </LinearLayout>
    </LinearLayout>

    <!-- 2 | NavigationView -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/activity_main_nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/activity_accueil_nav_header"
        app:menu="@menu/activity_accueil_menu_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>