<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activities.add.AddRdvExamenActivity"
    >

    <!-- 1 | MainActivity RootView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <include layout="@layout/toolbar"/>

        <include layout="@layout/progress_bar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/listExamen"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/heart">

            <AutoCompleteTextView
                android:id="@+id/selectionExamen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Selectionner"
                android:inputType="none"
                android:focusable="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/text_date"
            app:errorEnabled="true"
            android:paddingLeft="80dip"
            android:paddingRight="80dip"
            app:startIconDrawable="@drawable/outline_event_black_24dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:onClick="showDatePicker"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutHeure"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/text_heure"
            app:errorEnabled="true"
            android:paddingLeft="80dip"
            android:paddingRight="80dip"
            app:startIconDrawable="@drawable/outline_schedule_black_18dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textHeure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:onClick="showTimePicker"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNote"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:endIconMode="clear_text"
            android:hint="@string/text_note"
            android:paddingLeft="40dip"
            android:paddingRight="40dip"
            app:startIconDrawable="@drawable/outline_format_align_center_black_24dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabSave"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dip"
                app:srcCompat="@drawable/outline_save_black_24dp"

                app:backgroundTint="@color/colorPrimary"
                app:tint="@android:color/white"
                />

        </LinearLayout>



    </LinearLayout>

    <include layout="@layout/bottom_navigation"/>

</androidx.drawerlayout.widget.DrawerLayout>